@@ -33,16 +33,16 @@ buildscript {
 plugins {
     id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
     id 'net.researchgate.release' version '2.8.1'
-    id 'com.github.ben-manes.versions' version '0.50.0'
+    id 'com.github.ben-manes.versions' version '0.51.0'
 }
 
 def checkstyleVersion = '9.3'
 def hamcrestVersion = '2.2'
-def junitVersion = '5.10.1'
+def junitVersion = '5.10.2'
 def mockitoVersion = '4.11.0'
 def hdrHistogramVersion = '2.1.12'
 def jmhVersion = '1.37'
-def byteBuddyVersion = '1.14.11'
+def byteBuddyVersion = '1.14.12'
 
 def agronaVersion = '1.20.0'
 def sbeVersion = '1.30.0'
@@ -193,6 +193,11 @@ subprojects {
             jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED')
             jvmArgs('--add-opens', 'java.base/java.util.zip=ALL-UNNAMED')
         }
+
+        if (buildJavaVersion >= 21) {
+            jvmArgs('-XX:+EnableDynamicAgentLoading')
+        }
+
         testClassesDirs = testing.suites.test.sources.output.classesDirs
         classpath = testing.suites.test.sources.runtimeClasspath
 
